fixed: input len && flex-wrap

--- a/index.html
+++ b/index.html
@@ -107,13 +107,45 @@
           <div class="button">Share</div>
         </section>
       </div>
-      <div class="title">
+      <!-- <div class="title">
         <div style="width: 65%; margin-left: 30px">Your Projects</div>
         <div style="width: 30%; margin-left: 40px">Annoucnment</div>
-      </div>
+      </div> -->
       <div class="projects-annoucements-peoples">
         <section class="projects">
+          <div style="width: 100%; margin-left: 20px" class="title">
+            Your Projects
+          </div>
+
           <!--Projects list -->
+          <span class="project-card">
+            <h5>Super cool project</h5>
+            <p class="card-text">
+              Iron Man is a superhero appearing in American comic books
+              published by Marvel Comics. The character was co-created by writer
+              the Hulk.
+            </p>
+            <div class="icons">
+              <i style="margin-right: 30px" class="fa-solid fa-share"></i>
+              <i style="margin-right: 30px" class="fa-solid fa-eye-slash"></i>
+
+              <i style="margin-right: 30px" class="fa-solid fa-star"></i>
+            </div>
+          </span>
+          <div class="project-card">
+            <h5>Super cool project</h5>
+            <p class="card-text">
+              Iron Man is a superhero appearing in American comic books
+              published by Marvel Comics. The character was co-created by writer
+              the Hulk.
+            </p>
+            <div class="icons">
+              <i style="margin-right: 30px" class="fa-solid fa-share"></i>
+              <i style="margin-right: 30px" class="fa-solid fa-eye-slash"></i>
+
+              <i style="margin-right: 30px" class="fa-solid fa-star"></i>
+            </div>
+          </div>
           <div class="project-card">
             <h5>Super cool project</h5>
             <p class="card-text">
@@ -200,7 +232,9 @@
           </div>
         </section>
         <!--Annoucements and peoples sections-->
-        <section class="annoucements-peoples">
+
+        <span class="annoucements-peoples">
+          <div class="title">Annoucements</div>
           <div class="annoucements">
             <div class="annoucement">
               <div style="color: grey; font-size: 14px; margin-bottom: 4px">
@@ -233,7 +267,8 @@
               </div>
             </div>
           </div>
-          <div class="title">People</div>
+          <!-- <div class="title">People</div> -->
+          <div class="title">Peoples</div>
           <div class="peoples">
             <section class="people">
               <img
@@ -257,7 +292,7 @@
               <p class="people-name">@Jaswanth</p>
             </section>
           </div>
-        </section>
+        </span>
       </div>
     </section>
   </body>
