--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
   </head>
   <body class="container">
     <!--Left side :nav bar && right home page-->
-    <nav class="navbar">
+
+    <nav id="sideNav" class="navbar">
       <section class="dashboard">
-        <i
-          style="font-size: 35px; color: grey"
-          class="fa-solid fa-table-cells-large"
-        ></i>
-        <p class="dashboard-text">Dashboard</p>
+        <div style="display: flex; flex-direction: row; align-items: center">
+          <i
+            style="font-size: 35px; color: grey"
+            class="fa-solid fa-table-cells-large"
+          ></i>
+          <p class="dashboard-text">Dashboard</p>
+        </div>
+        <i onClick="closeNav()" class="fa-solid fa-angles-left button-icon"></i>
       </section>
       <section class="nav-options">
         <!--List of options in nav bar-->
@@ -73,6 +77,12 @@
     <section class="home">
       <!--Top section in home page-->
       <div class="search-bar-and-profile">
+        <i
+          id="menu-button"
+          onClick="openNav()"
+          style="visibility: hidden"
+          class="fa-solid fa-bars button-icon"
+        ></i>
         <section class="search-bar">
           <i style="color: grey" class="fa-solid fa-magnifying-glass"></i>
           <input />
@@ -113,7 +123,10 @@
       </div> -->
       <div class="projects-annoucements-peoples">
         <section class="projects">
-          <div style="width: 100%; margin-left: 20px" class="title">
+          <div
+            style="width: 100%; height: 20px; margin-left: 20px"
+            class="title"
+          >
             Your Projects
           </div>
 
@@ -295,5 +308,17 @@
         </span>
       </div>
     </section>
+
+    <script>
+      function openNav() {
+        document.getElementById("sideNav").style.display = "block";
+        document.getElementById("menu-button").style.visibility = "hidden";
+      }
+
+      function closeNav() {
+        document.getElementById("sideNav").style.display = "None";
+        document.getElementById("menu-button").style.visibility = "visible";
+      }
+    </script>
   </body>
 </html>
